Removed z-index from header menu to ensure flyout-cart always displays on top

--- a/src/Presentation/Nop.Web/Themes/NewEraChickens/Content/css/styles.css
+++ b/src/Presentation/Nop.Web/Themes/NewEraChickens/Content/css/styles.css
@@ -6221,7 +6221,6 @@ pre {
 
 .header-menu {
 	position: relative;
-	z-index: 5;
 	width: 980px;
 	margin: 0 auto 30px;
 	border-top: 1px solid #ddd;
